--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
-language: java
-sudo: false
+language: android
+android:
+  components:
+    # The BuildTools version used by your project
+    - build-tools-19.1.0
 
+    # The SDK version used to compile your project
+    - android-23
+    
 before_install:
  - chmod +x gradlew
