--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ android:
 
     # The SDK version used to compile your project
     - android-23
+    - extra-android-m2repository
     
 before_install:
  - chmod +x gradlew
